[metadata]
name = pq_checklist
version = 0.0.1
description = An Python script to collect performance data from AIX servers and store into a influxDB
long_description = file: README.md
keywords = AIX, Monitoring, Performance, Influxdb, HealthCheck
license = GPLv3
url = https://github.com/pslq/checklist-aix
author = Paulo Sergio Lemes Queiroz
author_email = paulo.sergio.lemes.queiroz@gmail.com
platforms = [ AIX, Linux ]
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[build-system]
requires = [ "setuptools, "wheel" ]

[options]
python_requires = >= 3.7
include_package_data = True
packages = find:
install_requires =
  ansible-runner
  configparser
  asyncio
  influxdb_client

[options.packages.find] #optional
exclude=tests, sh
build-backend = "setuptools.build_meta"

[options.entry_points]
console_scripts =
    main = pq_checklist:main
